# Pokemon_type_predictor

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  evaluate_output.txt  export_weights.py  fix_keras.py  fix_keras2.py  patch_h5.py  pyproject.toml  requirements.txt  setup.cfg  train_log.txt  verify_install.py  verify_project.py
notebooks/: 2_feature_extraction.ipynb  3_modeling_evaluation.ipynb  4_inference.ipynb  baseline-models.ipynb  cnn-transfer-learning.ipynb  data-loader.ipynb  feature-extraction-pipeline.ipynb  hybrid-models.ipynb  mlp-optimization.ipynb  quantitative-evaluation.ipynb  scenario-testing.ipynb  train_models.ipynb  xgboost-tuning.ipynb
pokemon_predictor/: __init__.py  config.py  data_utils.py  download.py  evaluate.py  features.py  losses.py  model_utils.py  predict.py  predict_cnn.py  tabular.py  train.py  visualization.py
pokemon_predictor/data_pipeline/: __init__.py  download.py  images.py
pokemon_predictor/modeling/: predict.py  predict_cnn.py
reports/: evaluation_report_combinations.txt  evaluation_report_raw.txt  evaluation_report_top2.txt  evaluation_report_top3.txt  model_performance_report.md  xgb_advanced_tuning_results.txt  xgb_tuning_results.txt
scripts/: generate_examples.py  generate_importance.py  generate_visuals.py  sweep_mlp.py  test_xgb_scenarios.py
src/: features.py
tests/: test_dataset.py  test_features.py  test_losses.py  test_predict.py
